@@ -1,3 +1,14 @@
+2021-03-31  Jiewen Tan  <jiewen_tan@apple.com>
+
+        Allow ASCWebKitSPISupport to be used on macOS
+        https://bugs.webkit.org/show_bug.cgi?id=224036
+        <rdar://76028645>
+
+        Reviewed by Brent Fulgham.
+
+        * UIProcess/WebAuthentication/Cocoa/AuthenticationServicesCoreSoftLink.h:
+        * UIProcess/WebAuthentication/Cocoa/AuthenticationServicesCoreSoftLink.mm:
+
 2021-04-01  Per Arne  <pvollan@apple.com>
 
         [GPU process] Enable CFPrefs direct mode
